--- a/src/test.html
+++ b/src/test.html
@@ -26,7 +26,7 @@
             <div class="card-header bg-primary text-bg-primary">
                 <div class="row">
                     <div class="col">
-                        id
+                        Joe
                     </div>
                 </div>
                 <div class="row">
@@ -38,9 +38,9 @@
             <div class="card-body">
                 <h5 class="card-title"></h5>
                 <ul class="list-group">
-                    <li class="list-group-item">id</li>
-                    <li class="list-group-item"><a href="mailto:email">email</a></li>
-                    <li class="list-group-item">Office Number: officenum</li>
+                    <li class="list-group-item">ID: 1</li>
+                    <li class="list-group-item">Email: <a href="mailto:josephjameshansen@gmail.com">josephjameshansen@gmail.com</a></li>
+                    <li class="list-group-item">Office Number: 1234</li>
                 </ul>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <div class="card-header bg-primary text-bg-primary">
                 <div class="row">
                     <div class="col">
-                        joe
+                        Claire
                     </div>
                 </div>
                 <div class="row">
@@ -61,9 +61,32 @@
             <div class="card-body">
                 <h5 class="card-title"></h5>
                 <ul class="list-group">
-                    <li class="list-group-item">id</li>
-                    <li class="list-group-item"><a href="mailto:email">email</a></li>
+                    <li class="list-group-item">ID: 2</li>
+                    <li class="list-group-item">Email: <a href="mailto:claire@email.com">claire@email.com</a></li>
                     <li class="list-group-item">Git Username: <a href="https://github.com/joejhansen">joejhansen</a></li>
+                </ul>
+            </div>
+        </div>
+    </div><div class="col-sm-4 mt-1">
+        <div class="card text-bg-light mb-3" style="max-width: 18rem;">
+            <div class="card-header bg-primary text-bg-primary">
+                <div class="row">
+                    <div class="col">
+                        Daniel
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        🎓 Intern
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title"></h5>
+                <ul class="list-group">
+                    <li class="list-group-item">ID: 3</li>
+                    <li class="list-group-item">Email: <a href="mailto:daniel@email.com">daniel@email.com</a></li>
+                    <li class="list-group-item">School: DePaul</li>
                 </ul>
             </div>
         </div>
