final changes to file paths

--- a/src/test.html
+++ b/src/test.html
@@ -26,7 +26,7 @@
             <div class="card-header bg-primary text-bg-primary">
                 <div class="row">
                     <div class="col">
-                        Joe
+                        Dave
                     </div>
                 </div>
                 <div class="row">
@@ -49,7 +49,7 @@
             <div class="card-header bg-primary text-bg-primary">
                 <div class="row">
                     <div class="col">
-                        Claire
+                        Jen
                     </div>
                 </div>
                 <div class="row">
@@ -62,7 +62,7 @@
                 <h5 class="card-title"></h5>
                 <ul class="list-group">
                     <li class="list-group-item">ID: 2</li>
-                    <li class="list-group-item">Email: <a href="mailto:claire@email.com">claire@email.com</a></li>
+                    <li class="list-group-item">Email: <a href="mailto:jen@email.com">jen@email.com</a></li>
                     <li class="list-group-item">Git Username: <a href="https://github.com/joejhansen">joejhansen</a></li>
                 </ul>
             </div>
@@ -72,7 +72,7 @@
             <div class="card-header bg-primary text-bg-primary">
                 <div class="row">
                     <div class="col">
-                        Daniel
+                        Paul
                     </div>
                 </div>
                 <div class="row">
@@ -85,8 +85,8 @@
                 <h5 class="card-title"></h5>
                 <ul class="list-group">
                     <li class="list-group-item">ID: 3</li>
-                    <li class="list-group-item">Email: <a href="mailto:daniel@email.com">daniel@email.com</a></li>
-                    <li class="list-group-item">School: DePaul</li>
+                    <li class="list-group-item">Email: <a href="mailto:paul@email.com">paul@email.com</a></li>
+                    <li class="list-group-item">School: Stanford</li>
                 </ul>
             </div>
         </div>
